--- a/extract/extract_faq_hemocentro.ipynb
+++ b/extract/extract_faq_hemocentro.ipynb
@@ -806,7 +806,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "with open('data/hemocentro.json', 'w', encoding='utf-8') as fp:\n",
+    "with open('../data/hemocentro.json', 'w', encoding='utf-8') as fp:\n",
     "    json.dump({\"data\":faq}, fp, indent=4)"
    ]
   }
