--- a/extract/extract_faq_redcross.ipynb
+++ b/extract/extract_faq_redcross.ipynb
@@ -1377,7 +1377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"data/redcross.json\", \"w\", encoding=\"utf-8\") as fp:\n",
+    "with open(\"../data/redcross.json\", \"w\", encoding=\"utf-8\") as fp:\n",
     "    json.dump({\"data\": faqs}, fp, indent=4)"
    ]
   }
